--- a/ingest/requirements.txt
+++ b/ingest/requirements.txt
@@ -20,6 +20,7 @@ effdet==0.4.1
 emoji==2.11.0
 et-xmlfile==1.1.0
 fastapi==0.110.1
+feedparser==6.0.11
 filelock==3.13.4
 filetype==1.2.0
 flatbuffers==24.3.25
@@ -27,6 +28,8 @@ fonttools==4.51.0
 fsspec==2024.3.1
 greenlet==3.0.3
 h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 huggingface-hub==0.22.2
 humanfriendly==10.0
 idna==3.7
@@ -99,6 +102,7 @@ regex==2024.4.16
 requests==2.31.0
 safetensors==0.4.3
 scipy==1.13.0
+sgmllib3k==1.0.0
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
