--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 python = ">=3.11.7,<3.12"
 fastapi = "0.104.1"
 uvicorn = {version = "0.23.2", extras = ["standard"]}
-llama-index = "0.10.30"
 pypdf = "4.0.1"
 python-dotenv = "1.0.0"
 google-generativeai = "0.3.2"
@@ -80,6 +79,7 @@ watchfiles = "0.21.0"
 websockets = "12.0"
 wrapt = "1.16.0"
 yarl = "1.9.4"
+llama-index = "^0.10.30"
 
 
 [build-system]
