--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -80,6 +80,8 @@ websockets = "12.0"
 wrapt = "1.16.0"
 yarl = "1.9.4"
 llama-index = "^0.10.30"
+llama-index-llms-together = "^0.1.3"
+llama-index-indices-managed-vectara = "^0.1.4"
 
 
 [build-system]
