--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -82,6 +82,7 @@ yarl = "1.9.4"
 llama-index = "^0.10.30"
 llama-index-llms-together = "^0.1.3"
 llama-index-indices-managed-vectara = "^0.1.4"
+llama-index-embeddings-together = "^0.1.3"
 
 
 [build-system]
